name:                stun
version:             0.1.0.0
synopsis:            Session Traversal Utilities for NAT (STUN) protocol
description:         Please see README.md
homepage:            https://github.com/oherrala/haskell-stun#readme
bug-reports:         https://github.com/oherrala/haskell-stun/issues
license:             MIT
license-file:        LICENSE
author:              Ossi Herrala
maintainer:          oherrala@gmail.com
copyright:           2016 Ossi Herrala
category:            Protocol, Network
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3, GHC == 8.0.1, GHC == 8.0.2

source-repository head
  type:              git
  location:          https://github.com/oherrala/haskell-stun

library
  hs-source-dirs:      src
  exposed-modules:     Network.STUN
                     , Network.STUN.Internal
  default-language:    Haskell2010
  ghc-options:         -Wall
  build-depends:       base
                     , bytestring
                     , cereal
                     , network
                     , text
                     , cryptonite

test-suite hlint
  hs-source-dirs:      test
  main-is:             HLint.hs
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , hlint

test-suite test
  hs-source-dirs:      test
  main-is:             test.hs
  other-modules:       RFC5769
                     , SmallCheck
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  type:                exitcode-stdio-1.0
  build-depends:       base
                     , bytestring
                     , cereal
                     , network
                     , text
                       -- testing deps
                     , tasty
                     , tasty-hunit
                     , tasty-smallcheck
                     , smallcheck
                     , stun
